--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <ul>
         <li>
           <a href="#">
-            <img src="/img/logoheader.png">
+            <img src="/AI-/Pics/logoheader.svg">
           </a></li>
         <li><a href="#">artificial intelligence</a></li>
         <li><a href="#">home</a></li>
