--- a/index.html
+++ b/index.html
@@ -25,23 +25,27 @@
           <p>next generation platform</p>
           <p>Artificial intelligence & Syber security</p>
           <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-          <a href="#"></a>
-          <a href="#"></a>
+          <a href="#">Get started</a>
+          <a href="#">Watch Video</a>
         </div>
         <div>
-          <a href="#">
-            <img src="Pics/Group400.svg">
-          </a>
-          <img src="Pics/Group401.svg">
-          <img src="Pics/Group402.svg">
-          <img src="Pics/Group403.svg">
+          <ul>
+            <li>
+              <a href="#">
+                <img src="Pics/Group400.svg">
+              </a>
+            </li>
+            <li><img src="Pics/Group401.svg"></li>
+            <li><img src="Pics/Group402.svg"></li>
+            <li><img src="Pics/Group403.svg"></li>
+          </ul>
         </div>
       </section>
       <section>
         <div>
           <h2>Apply AI, Deep Learning and Data Sciece to solve</h2>
           <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-          <a href=""></a>
+          <a href="#"></a>
         </div>
       </section>
       <section>
@@ -86,37 +90,44 @@
         <p>450 Wall Street, USA, New York</p>
       </div>
       <ul>
-        <li><a href="">INFORMATION</a></li>
-        <li><a href="">New Collection</a></li>
-        <li><a href="">About store</a></li>
-        <li><a href="">Contact Us</a></li>
-        <li><a href="">Latest News</a></li>
-        <li><a href="">Our Sitemap</a></li>
-        <li><a href="">Orders History</a></li>
+        <li><a href="#">INFORMATION</a></li>
+        <li><a href="#">New Collection</a></li>
+        <li><a href="#">About store</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Latest News</a></li>
+        <li><a href="#">Our Sitemap</a></li>
+        <li><a href="#">Orders History</a></li>
       </ul>
       <ul>
-        <li><a href="">FOOTER MENU</a></li>
-        <li><a href="">Instagram Profile</a></li>
-        <li><a href="">New Collection</a></li>
-        <li><a href="">Contact Us</a></li>
-        <li><a href="">Latest News</a></li>
-        <li><a href="">Terms&Conditions</a></li>
-        <li><a href="">Purchase Theme</a></li>
+        <li><a href="#">FOOTER MENU</a></li>
+        <li><a href="#">Instagram Profile</a></li>
+        <li><a href="#">New Collection</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Latest News</a></li>
+        <li><a href="#">Terms&Conditions</a></li>
+        <li><a href="#">Purchase Theme</a></li>
       </ul>
       <ul>
-        <li><a href="">USEFUL LINKS</a></li>
-        <li><a href="">Instagram Profile</a></li>
-        <li><a href="">New Collection</a></li>
-        <li><a href="">Contact Us</a></li>
-        <li><a href="">Latest News</a></li>
-        <li><a href="">Terms&Conditions</a></li>
-        <li><a href="">Purchase Theme</a></li>
+        <li><a href="#">USEFUL LINKS</a></li>
+        <li><a href="#">Instagram Profile</a></li>
+        <li><a href="#">New Collection</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Latest News</a></li>
+        <li><a href="#">Terms&Conditions</a></li>
+        <li><a href="#">Purchase Theme</a></li>
       </ul>
       <div>
         <p>ABOUT THE STORE</p>
         <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and visual mockups.</p>
-        <a href="">www.company.com</a>
-        <a href="">English</a>
+        <a href="#">www.company.com</a>
+        <a href="#">English</a>
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
       </div>
     </footer>
   </body>
