added link for images

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <img src="Pics/Group400.svg">
               </a>
             </li>
-            <li><img src="Pics/Group401.svg"></li>
-            <li><img src="Pics/Group402.svg"></li>
-            <li><img src="Pics/Group403.svg"></li>
+            <li><a href="#"><img src="Pics/Group401.svg"></a></li>
+            <li><a href="#"><img src="Pics/Group402.svg"></a></li>
+            <li><a href="#"><img src="Pics/Group403.svg"></a></li>
           </ul>
         </div>
       </section>
