--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
   <head lang="en">
     <title>Artificial intelligence</title>
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8">
+    <link href="/css/style.css" rel="stylesheet">  
   </head>
-  <body>
+  <body bgcolor="#020A18">
     <header>
-      <ul>
+      <ul class="header-nav">
         <li>
           <a href="#">
-            <img src="Pics/logoheader.svg">
+            <img src="Pics/logoheader.svg" width="44.04" height="57">
           </a></li>
-        <li><a href="#">artificial intelligence</a></li>
+        <li><a class="header-art" href="#">Artificial intelligence</a></li>
         <li><a href="#">home</a></li>
         <li><a href="#">about</a></li>
         <li><a href="#">service</a></li>
@@ -21,10 +22,10 @@
     <main>
       <section>
         <h1>Artificial intelligence</h1>
-        <div>
-          <p>next generation platform</p>
-          <p>Artificial intelligence & Syber security</p>
-          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+        <div class="section1-button">
+          <p class="section1-next">next generation platform</p>
+          <p class="section1-headline">Artificial intelligence & Syber security</p>
+          <p class="section1">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
           <a href="#">Get started</a>
           <a href="#">Watch Video</a>
         </div>
@@ -32,56 +33,56 @@
           <ul>
             <li>
               <a href="#">
-                <img src="Pics/Group400.svg">
+                <img src="Pics/Group400.svg" width="217.64" height="58.9">
               </a>
             </li>
-            <li><a href="#"><img src="Pics/Group401.svg"></a></li>
-            <li><a href="#"><img src="Pics/Group402.svg"></a></li>
-            <li><a href="#"><img src="Pics/Group403.svg"></a></li>
+            <li><a href="#"><img src="Pics/Group401.svg" width="212.3" height="59"></a></li>
+            <li><a href="#"><img src="Pics/Group402.svg" width="206.9" height="59"></a></li>
+            <li><a href="#"><img src="Pics/Group403.svg" width="294.45" height="59"></a></li>
           </ul>
         </div>
       </section>
       <section>
-        <div>
-          <h2>Apply AI, Deep Learning and Data Sciece to solve</h2>
+        <div class="section2-text">
+          <h2 class="section2-headline">Apply AI, Deep Learning and Data Sciece to solve</h2>
           <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-          <a href="#"></a>
+          <a href="#">Learn more</a>
         </div>
       </section>
-      <section>
+      <section class="section3-headline">
         <div>
           <h3>Naxly as the Winners in Global Agency Awards</h3>
-          <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+          <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
         <div>
           <h3>Expert Prespective Agency Awards</h3>
-          <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+          <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
         <div>
           <h3>Business Prespective Global Agency Awards</h3>
-          <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+          <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
         <div>
           <h3>Value for Results in Global Agency Awards</h3>
-          <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+          <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
         <div>
           <h3>Global Experience in Agency Awards</h3>
-          <p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+          <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
       </section>
-      <section>
-        <h2>What our clients say about our awesome solutions</h2>
+      <section class="section2-text">
+        <h2 class="section2-headline">What our clients say about our awesome solutions</h2>
         <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it who do not know.</p>
         <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing .</p>
         <p>Lorem ipsum is placeholder previewing layouts and visual mockups.</p>
         <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
       </section>
     </main>
-    <footer>
+    <footer class="footer-text">
       <div>
-        <img src="Pics/logoheader.svg">
-        <h4>Artificial Intelligence</h4>
+        <img src="Pics/logoheader.svg" width="45" height="58.24">
+        <h4 class="footer-art">Artificial Intelligence</h4>
         <p>
           Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and visual mockups.
         </p>
@@ -122,11 +123,11 @@
         <a href="#">www.company.com</a>
         <a href="#">English</a>
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="#"><img src="/Pics/footer_facebook.svg" width="8.25" height="15"></a></li>
+          <li><a href="#"><img src="/Pics/footer.insta.svg" width="15" height="15"></a></li>
+          <li><a href="#"><img src="/Pics/footer.twitter.svg" width="18.39" height="15"></a></li>
+          <li><a href="#"><img src="/Pics/footer_in.svg" width="15" height="14.25"></a></li>
+          <li><a href="#"><img src="/Pics/footer_youtube.svg" width="18" height="12.65"></a></li>
         </ul>
       </div>
     </footer>
