--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul class="header-nav">
         <li>
           <a href="#">
-            <img src="Pics/logoheader.svg" width="44.04" height="57">
+            <img src="Pics/logoheader.svg" width="44" height="57">
           </a></li>
         <li><a class="header-art" href="#">Artificial intelligence</a></li>
         <li><a href="#">home</a></li>
@@ -21,11 +21,10 @@
     </header>
     <main>
       <section>
-        <h1>Artificial intelligence</h1>
-        <div class="section1-button">
-          <p class="section1-next">next generation platform</p>
-          <p class="section1-headline">Artificial intelligence & Syber security</p>
-          <p class="section1">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+        <div class="section1">
+          <p class="section1-subtitle">next generation platform</p>
+          <h1>Artificial intelligence & Syber security</h1>
+          <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
           <a href="#">Get started</a>
           <a href="#">Watch Video</a>
         </div>
@@ -33,12 +32,12 @@
           <ul>
             <li>
               <a href="#">
-                <img src="Pics/Group400.svg" width="217.64" height="58.9">
+                <img src="Pics/Group400.svg" width="217" height="59">
               </a>
             </li>
-            <li><a href="#"><img src="Pics/Group401.svg" width="212.3" height="59"></a></li>
-            <li><a href="#"><img src="Pics/Group402.svg" width="206.9" height="59"></a></li>
-            <li><a href="#"><img src="Pics/Group403.svg" width="294.45" height="59"></a></li>
+            <li><a href="#"><img src="Pics/Group401.svg" width="212" height="59"></a></li>
+            <li><a href="#"><img src="Pics/Group402.svg" width="207" height="59"></a></li>
+            <li><a href="#"><img src="Pics/Group403.svg" width="294" height="59"></a></li>
           </ul>
         </div>
       </section>
@@ -81,8 +80,8 @@
     </main>
     <footer class="footer-text">
       <div>
-        <img src="Pics/logoheader.svg" width="45" height="58.24">
-        <h4 class="footer-art">Artificial Intelligence</h4>
+        <img src="Pics/logoheader.svg" width="45" height="58">
+        <h4 class="footer-subtitle">Artificial Intelligence</h4>
         <p>
           Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and visual mockups.
         </p>
@@ -91,7 +90,7 @@
         <p>450 Wall Street, USA, New York</p>
       </div>
       <ul>
-        <li><a href="#">INFORMATION</a></li>
+        <li class="footer-heads"><a href="#">INFORMATION</a></li>
         <li><a href="#">New Collection</a></li>
         <li><a href="#">About store</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -100,7 +99,7 @@
         <li><a href="#">Orders History</a></li>
       </ul>
       <ul>
-        <li><a href="#">FOOTER MENU</a></li>
+        <li class="footer-heads"><a href="#">FOOTER MENU</a></li>
         <li><a href="#">Instagram Profile</a></li>
         <li><a href="#">New Collection</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -109,7 +108,7 @@
         <li><a href="#">Purchase Theme</a></li>
       </ul>
       <ul>
-        <li><a href="#">USEFUL LINKS</a></li>
+        <li class="footer-heads"><a href="#">USEFUL LINKS</a></li>
         <li><a href="#">Instagram Profile</a></li>
         <li><a href="#">New Collection</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -118,16 +117,16 @@
         <li><a href="#">Purchase Theme</a></li>
       </ul>
       <div>
-        <p>ABOUT THE STORE</p>
+        <p class="footer-heads">ABOUT THE STORE</p>
         <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and visual mockups.</p>
         <a href="#">www.company.com</a>
         <a href="#">English</a>
         <ul>
-          <li><a href="#"><img src="/Pics/footer_facebook.svg" width="8.25" height="15"></a></li>
+          <li><a href="#"><img src="/Pics/footer_facebook.svg" width="8" height="15"></a></li>
           <li><a href="#"><img src="/Pics/footer.insta.svg" width="15" height="15"></a></li>
-          <li><a href="#"><img src="/Pics/footer.twitter.svg" width="18.39" height="15"></a></li>
-          <li><a href="#"><img src="/Pics/footer_in.svg" width="15" height="14.25"></a></li>
-          <li><a href="#"><img src="/Pics/footer_youtube.svg" width="18" height="12.65"></a></li>
+          <li><a href="#"><img src="/Pics/footer.twitter.svg" width="18" height="15"></a></li>
+          <li><a href="#"><img src="/Pics/footer_in.svg" width="15" height="14"></a></li>
+          <li><a href="#"><img src="/Pics/footer_youtube.svg" width="18" height="13"></a></li>
         </ul>
       </div>
     </footer>
