changed location of header and 1st section

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   </head>
   <body bgcolor="#020A18">
     <header>
+      <a class="header-art" href="#">
+        <img src="Pics/logoheader.svg" width="44" height="57"><span>Artificial intelligence</span>
+      </a>
       <ul class="header-nav">
-        <li>
-          <a href="#">
-            <img src="Pics/logoheader.svg" width="44" height="57"><span class="header-art">Artificial intelligence</span>
-          </a></li>
         <li><a href="#">home</a></li>
         <li><a href="#">about</a></li>
         <li><a href="#">service</a></li>
@@ -24,7 +23,7 @@
           <p class="section1-subtitle">next generation platform</p>
           <h1 class="main-heading">Artificial intelligence & Syber security</h1>
           <p class="section1-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-          <a class="section1-buttons" href="#">Get started</a>
+          <a class="section1-buttons" href="#" >Get started</a>
           <a class="section1-buttons" href="#">Watch Video</a>
         </div>
         <div>
