completed 1st section and started 2nd

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link href="/css/style.css" rel="stylesheet">  
   </head>
   <body bgcolor="#020A18">
-    <header>
+    <header class="header-row">
       <a class="header-art" href="#">
         <img src="Pics/logoheader.svg" width="44" height="57"><span>Artificial intelligence</span>
-      </a>
+        </a>
       <ul class="header-nav">
         <li><a href="#">home</a></li>
         <li><a href="#">about</a></li>
