Sorry, i have done too much on one branch. Completed 1st and 2nd section, started 3rd and 4th section(but can delete two last if needed)

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     </header>
     <main>
       <section>
-        <div>
+        <div class="section1">
           <p class="section1-subtitle">next generation platform</p>
           <h1 class="main-heading">Artificial intelligence & Syber security</h1>
           <p class="section1-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
           <a class="section1-buttons" href="#" >Get started</a>
           <a class="section1-buttons" href="#">Watch Video</a>
         </div>
+        <img class="section1-photo" src="Pics/section1MainPhoto.png">
         <div>
           <ul class="section1-listofpics">
             <li>
@@ -39,41 +40,42 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section2">
         <div>
           <h2 class="section2-headline">Apply AI, Deep Learning and Data Sciece to solve</h2>
           <p class="section2-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
           <a class="section2-link" href="#">Learn more</a>
         </div>
+        <img class="section2-photo" src="Pics/section2MainPhoto.png">
       </section>
-      <section>
-        <div>
+      <section class="section3-pseudo">
+        <div class="section3-div">
           <h3 class="section3-headline">Naxly as the Winners in Global Agency Awards</h3>
           <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
-        <div>
+        <div class="section3-div">
           <h3 class="section3-headline">Expert Prespective Agency Awards</h3>
           <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
-        <div>
+        <div class="section3-div">
           <h3 class="section3-headline">Business Prespective Global Agency Awards</h3>
           <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
-        <div>
+        <div class="section3-div">
           <h3 class="section3-headline">Value for Results in Global Agency Awards</h3>
           <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
-        <div>
+        <div class="section3-div">
           <h3 class="section3-headline">Global Experience in Agency Awards</h3>
           <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
         </div>
       </section>
-      <section>
-        <h2 class="section2-headline">What our clients say about our awesome solutions</h2>
-        <p class="section2-text">To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it who do not know.</p>
-        <p class="section2-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing .</p>
-        <p class="section2-text">Lorem ipsum is placeholder previewing layouts and visual mockups.</p>
-        <p class="section2-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+      <section class="section4">
+        <h2>What our clients say about our awesome solutions</h2>
+        <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it who do not know.</p>
+        <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing .</p>
+        <p>Lorem ipsum is placeholder previewing layouts and visual mockups.</p>
+        <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
       </section>
     </main>
     <footer class="footer">
