--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   </head>
   <body bgcolor="#020A18">
     <header class="header-row">
+      <div class="pixel-perfect"></div>
       <a class="header-art" href="#">
         <img src="Pics/logoheader.svg" width="44" height="57"><span>Artificial intelligence</span>
         </a>
       <ul class="header-nav">
         <li><a href="#">home</a></li>
         <li><a href="#">about</a></li>
-        <li><a href="#">service</a></li>
+        <li><a href="#">services</a></li>
+        <li><a href="#">blog</a></li>
         <li><a href="#">contact</a></li>
+        <li><a class="header-button" href="#">Sign In</a></li>
       </ul>
     </header>
     <main>
@@ -23,8 +26,10 @@
           <p class="section1-subtitle">next generation platform</p>
           <h1 class="main-heading">Artificial intelligence & Syber security</h1>
           <p class="section1-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-          <a class="section1-buttons" href="#" >Get started</a>
-          <a class="section1-buttons" href="#">Watch Video</a>
+          <div class="section1-minidiv">
+            <a class="section1-buttons" href="#" >Get Started</a>
+            <a class="section1-buttons" href="#"><img src="Pics/section1_playbutton.svg">Watch Video</a>
+          </div>
         </div>
         <img class="section1-photo" src="Pics/section1MainPhoto.png">
         <div>
