--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       <ul class="footer-bigList">
         <li>
           <div class="footer-div1">
-            <img src="Pics/logoheader.svg" width="45" height="58" alt="logo of the website">
+            <img src="Pics/logoheader.svg" alt="logo of the website">
             <h4 class="footer-subtitle">Artificial Intelligence</h4>
-            <p class="footer-text-div1">
+            <div class="footer-text-div1"><p>
               Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and visual mockups.
-            </p>
+            </p></div>
             <p class="footer-cont">Company@gmail.com.com</p>
             <p class="footer-cont">Phone: (064) 332-1233</p>
             <p class="footer-cont">450 Wall Street, USA, New York</p>
@@ -107,18 +107,7 @@
           <ul class="footer-ul">
             <li><a class="footer-heads" href="#">INFORMATION</a></li>
             <li><a href="#">New Collection</a></li>
-            <li><a href="#">About store</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Latest News</a></li>
-            <li><a href="#">Our Sitemap</a></li>
-            <li><a href="#">Orders History</a></li>
-          </ul>
-        </li>
-        <li>
-          <ul class="footer-ul">
-            <li><a class="footer-heads" href="#">INFORMATION</a></li>
-            <li><a href="#">New Collection</a></li>
-            <li><a href="#">About store</a></li>
+            <li><a href="#">About Store</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Latest News</a></li>
             <li><a href="#">Our Sitemap</a></li>
@@ -128,7 +117,7 @@
         <li>
           <ul class="footer-ul">
             <li><a class="footer-heads" href="#">FOOTER MENU</a></li>
-            <li><a href="#">Instagram Profile</a></li>
+            <li><a href="#">Instagram profile</a></li>
             <li><a href="#">New Collection</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Latest News</a></li>
@@ -139,11 +128,11 @@
         <li>
           <ul class="footer-ul">
             <li><a class="footer-heads" href="#">USEFUL LINKS</a></li>
-            <li><a href="#">Instagram Profile</a></li>
+            <li><a href="#">Instagram profile</a></li>
             <li><a href="#">New Collection</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Latest News</a></li>
-            <li><a href="#">Terms&Conditions</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
             <li><a href="#">Purchase Theme</a></li>
           </ul>
         </li>
