--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Artificial intelligence</title>
+    <title>Artificial Intelligence</title>
     <meta charset="UTF-8">
     <link href="/css/style.css" rel="stylesheet">  
   </head>
@@ -9,7 +9,7 @@
     <header class="header-row">
       <div class="pixel-perfect"></div>
       <a class="header-art" href="#">
-        <img src="Pics/logoheader.svg" width="44" height="57" alt="logo of the website"><span>Artificial intelligence</span>
+        <img src="Pics/logoheader.svg" width="44" height="57" alt="logo of the website"><span>Artificial Intelligence</span>
         </a>
       <ul class="header-nav">
         <li><a href="#">home</a></li>
@@ -53,8 +53,8 @@
         </div>
         <img class="section2-photo" src="Pics/section2MainPhoto.png" alt="brain over the phone">
       </section>
-      <section class="section3-pseudo">
-        <div class="section3-div">
+      <section>
+        <div class="section3-pseudo"><div class="section3-div">
           <img class="section3-photo1" src="Pics/section3First.svg" alt="circle">
           <h3 class="section3-headline">Naxly as the Winners in Global Agency Awards</h3>
           <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
@@ -78,7 +78,8 @@
           <img class="section3-photo5" src="Pics/section3Fifth.svg" alt="rocket pshhhhh">
           <h3 class="section3-headline">Global Experience in Agency Awards</h3>
           <p class="section3-text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
-        </div>
+        </div></div>
+        <img class="" src="Pics/section3commas.svg" alt="commas">
       </section>
       <section class="section4">
         <img class="section4-photo" src="Pics/Section4Photo.png" alt="mini human and huge phone">
@@ -93,19 +94,28 @@
       <ul class="footer-bigList">
         <li>
           <div class="footer-div1">
-            <img src="Pics/logoheader.svg" alt="logo of the website">
+            <img class="footer-div1-logo" src="Pics/logoheader.svg" alt="logo of the website">
             <h4 class="footer-subtitle">Artificial Intelligence</h4>
             <div class="footer-text-div1"><p>
               Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and visual mockups.
             </p></div>
-            <p class="footer-cont">Company@gmail.com.com</p>
-            <p class="footer-cont">Phone: (064) 332-1233</p>
-            <p class="footer-cont">450 Wall Street, USA, New York</p>
+            <div class="footer-conts-div">
+              <img src="Pics/gmail_logo_footer.svg" alt="gmail_logo">
+              <p class="footer-cont">Company@gmail.com.com</p>
+            </div>
+            <div class="footer-conts-div">
+              <img src="Pics/footer-phone.svg" alt="phone logo">
+              <p class="footer-cont">Phone: (064) 332-1233</p>
+            </div>
+            <div class="footer-conts-div">
+              <img src="Pics/footer-location.svg" alt="location logo">
+              <p class="footer-cont">450 Wall Street, USA, New York</p>
+            </div>
           </div>
         </li>
         <li>      
           <ul class="footer-ul">
-            <li><a class="footer-heads" href="#">INFORMATION</a></li>
+            <li><div><a class="footer-heads" href="#">INFORMATION</a></div></li>
             <li><a href="#">New Collection</a></li>
             <li><a href="#">About Store</a></li>
             <li><a href="#">Contact Us</a></li>
@@ -116,18 +126,18 @@
         </li>
         <li>
           <ul class="footer-ul">
-            <li><a class="footer-heads" href="#">FOOTER MENU</a></li>
+            <li><div><a class="footer-heads" href="#">FOOTER MENU</a></div></li>
             <li><a href="#">Instagram profile</a></li>
             <li><a href="#">New Collection</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Latest News</a></li>
-            <li><a href="#">Terms&Conditions</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
             <li><a href="#">Purchase Theme</a></li>
           </ul>
         </li>
         <li>
           <ul class="footer-ul">
-            <li><a class="footer-heads" href="#">USEFUL LINKS</a></li>
+            <li><div><a class="footer-heads" href="#">USEFUL LINKS</a></div></li>
             <li><a href="#">Instagram profile</a></li>
             <li><a href="#">New Collection</a></li>
             <li><a href="#">Contact Us</a></li>
@@ -140,7 +150,7 @@
           <div class="footer-about">
             <p class="footer-heads">ABOUT THE STORE</p>
             <p class="footer-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and layouts and visual mockups.</p>
-            <a class="footer-heads" href="#">www.company.com</a>
+            <span><a class="footer-about-conts" href="#">www.company.com</a></span>
             <ul class="footer-soc_med">
               <li><a href="#"><img src="/Pics/footer_facebook.svg" width="8" height="15" alt="facebook logo"></a></li>
               <li><a href="#"><img src="/Pics/footer.insta.svg" width="15" height="15" alt="insta logo"></a></li>
@@ -148,7 +158,11 @@
               <li><a href="#"><img src="/Pics/footer_in.svg" width="15" height="14" alt="linkedin logo"></a></li>
               <li><a href="#"><img src="/Pics/footer_youtube.svg" width="18" height="13" alt="youtube logo"></a></li>
             </ul>
-            <a class="footer-heads" href="#">English</a>
+            <div class="footer-lang">
+              <img src="Pics/footer_lang.svg" alt="world">
+              <a href="#">English</a>
+              <img src="Pics/change-of-lang.svg" alt="row">
+            </div>
           </div>
         </li>
       </ul>
